# Hip

./: Anchor.toml  daily_claim_with_civic_gateway.json
docs/: index.html
programs/hip/: Cargo.toml
programs/hip/src/: lib.rs  lib1.rs  lib4.rs  lib5.rs  lib6.rs
tests/: hip.ts
