[package]
name = "hip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hip"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
#idl-build = ["anchor-lang/idl-build"]
custom-heap = []                # Adding custom-heap
custom-panic = []               # Adding custom-panic
anchor-debug = []    

[dependencies]
#socket2 = "0.5.8"
mio = "1.0.3"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
#anchor-lang = { git = "https://github.com/project-serum/anchor", tag = "v0.29.0" }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10" # Added sha3 crate
#rand = "0.8"
#tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
solana-gateway-anchor = "0.1.3"
solana-gateway = { version = "0.6.0", features = ["no-entrypoint"] }